# bss_sdk_test_ci_cd

./: .gitignore  .gitmodules  settings.gradle
.github/workflows/: build.yaml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bss_sdk/: CMakeLists.txt
app/src/main/cpp/bss_sdk/api/: BssDevice.cpp  BssDevice.h  CMakeLists.txt  bss_api.cpp  bss_api.h  bss_config.cpp  bss_config.h  bss_data_def.h
app/src/main/cpp/bss_sdk/app/function-test/: CMakeLists.txt  chargerTesting.cpp
app/src/main/cpp/bss_sdk/app/sampleApp/: CMakeLists.txt  sampleApp.cpp
app/src/main/cpp/bss_sdk/app/unit-test/bp/: CMakeLists.txt  bp_assigning.cpp  bp_sn_writing.cpp  bp_upgrading.cpp
app/src/main/cpp/bss_sdk/bpManagement/: Bp.h  BpManagement.cpp  BpManagement.h  CMakeLists.txt
app/src/main/cpp/bss_sdk/bpManagement/canopen/: BpAssignModule.cpp  BpAssignModule.h  BpCoCom.cpp  BpCoCom.h  CanMasterDef.h
app/src/main/cpp/bss_sdk/cabinetManagement/: CMakeLists.txt  CabCommunication.cpp  CabCommunication.h  CabManagement.cpp  CabManagement.h
app/src/main/cpp/bss_sdk/common/: BssModbusCom.cpp  BssModbusCom.h  BssModbusDefine.h  CMakeLists.txt
app/src/main/cpp/bss_sdk/common/canopen/: CMakeLists.txt
app/src/main/cpp/bss_sdk/common/canopen/init/: app_co_init.c  app_co_init.h
app/src/main/cpp/bss_sdk/common/canopen/interface/: sm_co_ethernet_if.c  sm_co_if.h  sm_co_modbus_if.cpp  sm_co_serial_if.c
app/src/main/cpp/bss_sdk/common/canopen/od/: od.c  od.h  od_config.h
app/src/main/cpp/bss_sdk/common/canopen/od/comm_od/: comm_od.c  comm_od.h  comm_od_default_value.c  comm_od_default_value.h
app/src/main/cpp/bss_sdk/common/canopen/od/manu_od/: manu_od.c  manu_od.h  manu_od_default_value.c  manu_od_default_value.h
app/src/main/cpp/bss_sdk/common/interfaces/: BpComInterface.h  BpManagerInterface.h  BpObserverInterface.h  CabComInterface.h  CabManagerInterface.h  CabObserverInterface.h  ChargerComInterface.h  ChargerManagerInterface.h  ChargerObserverInterface.h  EMeterManagerInterface.h  ModbusComInterface.h  ModbusHandleInterface.h  ModbusMasterInterface.h  ModbusRtuEMeterInterface.h  NodeIdControllerInterface.h  OtaFwManagerInterface.h  OtaServiceInterface.h  OtaServiceObserverInterface.h
app/src/main/cpp/bss_sdk/common/modbus/: CMakeLists.txt  ModbusComImpl.cpp  ModbusComImpl.h  ModbusDefine.h  ModbusMasterImpl.cpp  ModbusMasterImpl.h
app/src/main/cpp/bss_sdk/docs/testing/unit-test/: Log-16102023-assigning.txt  Log-17102023-assigning.txt  Log-17102023-writeSN.txt
app/src/main/cpp/bss_sdk/docs/testing/unit-test/assigning/: Log-11102023.txt  Log-12102023-1000-1.txt  Log-12102023-1000-2.txt  Log-12102023-1000-3.txt  Log-12102023-2000-2.txt  Log-12102023-2000.txt  Log-12102023-3000.txt  Log-12102023-5000.txt
app/src/main/cpp/bss_sdk/libs/canopen/: CMakeLists.txt  CO.c  CO.h  CO_CAN_Msg.h  CO_CRC.c  CO_CRC.h  CO_FLASH.c  CO_FLASH.h  CO_OD.c  CO_OD.h  CO_OD_sign.c  CO_OD_sign.h  CO_OD_storage.c  CO_OD_storage.h  CO_Object.h  CO_SDO.h  CO_SDOclient.c  CO_SDOclient.h  CO_SDOserver.c  CO_SDOserver.h  CO_SYNC.c  CO_SYNC.h  CO_TPDO.c  CO_TPDO.h  CO_config.h  CO_utils.h
app/src/main/cpp/bss_sdk/libs/host/: CMakeLists.txt  sm_cmd.h  sm_host.c  sm_host.h
app/src/main/cpp/bss_sdk/libs/json-maker/: json-maker.c
app/src/main/cpp/bss_sdk/libs/nanoModbus/: nanomodbus.c  nanomodbus.h
app/src/main/cpp/bss_sdk/libs/tiny-json/: tiny-json.c  tiny-json.h
app/src/main/cpp/bss_sdk/ota/: CMakeLists.txt  OtaCoModbusIfConfig.h  OtaFwManager.cpp  OtaFwManager.h  OtaService.cpp  OtaService.h  sm_canopen_boot_output.c  sm_co_modbus_if.cpp  sm_file_boot_input.c  sm_ota_boot_impl.h
app/src/main/cpp/bss_sdk/ota/boot/: sm_boot_master.c  sm_boot_master.h  sm_boot_slave.c  sm_boot_slave.h
app/src/main/cpp/bss_sdk/ota/fw/: sm_fw.c  sm_fw.h  sm_segment.c  sm_segment.h
app/src/main/cpp/bss_sdk/powerManagement/: CMakeLists.txt  ChargerCom.cpp  ChargerCom.h  ChargerManager.cpp  ChargerManager.h  PowerManager.cpp  PowerManager.h
app/src/main/cpp/bss_sdk/powerManagement/measurement/: Dds6619ModbusEMeter.h  ModbusEMeterManager.cpp  ModbusEMeterManager.h  Vse11ModbusEMeter.h
app/src/main/cpp/bss_sdk/utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  SerialPort.cpp  SerialPort.h  utils.h
app/src/main/cpp/bss_sdk/utils/c-utils/: CRC.c  CRC.h  intel_hex.c  intel_hex.h  string_t.c  string_t.h
app/src/main/cpp/bss_sdk/utils/c-utils/linux/: linux_serial.c  linux_serial.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
app/src/main/cpp/bss_sdk/utils/threading/: thread_utils.h
app/src/main/cpp/bss_sdk/utils/timing/: DateTime.cpp  DateTime.h  TimeUtils.h  Timer.h  elapsed_timer.h
app/src/main/res/anim/: animation_rotate.xml
app/src/main/res/color/: selector.xml
app/src/main/res/drawable/: avtar_defaul.xml  bg_battery_compartment_black.xml  bg_battery_compartment_blue.xml  bg_button_blue.xml  bg_button_disable.xml  bg_button_logout.xml  bg_button_red.xml  bg_circle_number.xml  bg_edittext.xml  bg_pb_change_battery_success.xml  bg_pb_sync_data.xml  bg_red_led.xml  bg_tap_on_screen.xml  bg_text_input_layout.xml  ic_maintaince.xml  ic_no_battery.xml  ic_no_internet.xml  ic_nosubscription.xml  ic_update.xml  img_back.xml  img_help.xml  img_icon_change_circle.xml  img_icon_close.xml  img_icon_continue.xml  img_icon_error.xml  img_icon_home.xml  img_icon_left_login.xml  img_icon_left_login_gray.xml  img_icon_left_start_change_battery.xml  img_icon_logout_red.xml  img_icon_logout_white.xml  img_icon_refresh.xml  img_icon_retry.xml  img_logo_selex_text.xml  img_logo_white.xml  ripple_rounded_button_textview.xml  shadow_color_bottom_black.xml  shadow_color_top_black.xml
app/src/main/res/layout/: activity_change_battery.xml  activity_change_battery_second.xml  activity_change_battery_success.xml  activity_loading.xml  activity_login_account.xml  activity_login_qractivity.xml  activity_main.xml  activity_result_newbattery.xml  activity_screen_standby.xml  item_banner.xml  (+11 more)
gradle/wrapper/: gradle-wrapper.properties
(+85 files in other folders)
